--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <div class="blog" id="interest">
     <h2>Interests</h2>
     <p>
-      I like making and editing videos and do a little bit of photography. I like <br>
-      writing and testing small scripts which are simple and readable.I like to code in<br>
-      python and sometimes c or java.I like to write stuff;I have written couple of blogs but<br>
+      I like making and editing videos and do a little bit of photography. I write <br>
+      and test small scripts which are simple and readable.I like to code in<br>
+      python and sometimes c or java.I like to write stuff; I have written couple of blogs but<br>
       never publish them XD .I love playing games and most of the other normie stuff.
     </p>
   </div>
