--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
   <div class="blog">
     <h2>What can I do for you!</h2>
     <p>
-      Well,to be frank I'm a minimalist who focusses on simple, bloat free and clean<br>
-      code that is easy to read and open source. If you would like to collaborate with <br>
+      I'm a minimalist who focusses on simple, bloat free and clean code that is easy<br>
+      to read and open source.My ideology is that if something has fewer lines of code<br>
+      then there's a less chance of bugss in it. If you would like to collaborate with <br>
       me on any project or connect with me, hit me up on my socials below(really inactive).
     </p>
   </div>
