--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <p>
       I'm a minimalist who focusses on simple, bloat free and clean code that is easy<br>
       to read and open source.My ideology is that if something has fewer lines of code<br>
-      then there's a less chance of bugss in it. If you would like to collaborate with <br>
+      then there's a less chance of bugs in it. If you would like to collaborate with <br>
       me on any project or connect with me, hit me up on my socials below(really inactive).
     </p>
   </div>
