--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arjun</title>
   </head>
   <body>
@@ -37,40 +38,40 @@
   <div class="blog" id="personal">
     <h2>Personal life</h2>
     <p>
-      I am a 19 y/o Computer Science and Engineering student from Kerala, India. I live in<br>
-      the western part of Kerala in the district of Alappuzha, away from all the busy <br>
-      commotion of the town.I'm friendly and easy to talk to.I’d describe myself as an enthusiastic<br>
-      team player.I played football both in high school and in college, so I learned how to work with<br>
-      others to achieve a collective goal. I also learned the importance not only of being able to lead,<br>
+      I am a 19 y/o Computer Science and Engineering student from Kerala, India. I live in
+      the western part of Kerala in the district of Alappuzha, away from all the busy
+      commotion of the town.I'm friendly and easy to talk to.I’d describe myself as an enthusiastic
+      team player.I played football both in high school and in college, so I learned how to work with
+      others to achieve a collective goal. I also learned the importance not only of being able to lead,
       but also of knowing when I needed to follow.
      </p>
   </div>
   <div class="blog" id="interest">
     <h2>Interests</h2>
     <p>
-      I like making and editing videos and do a little bit of photography. I write <br>
-      and test small scripts which are simple and readable.I like to code in<br>
-      python and sometimes c or java.I like to write stuff; I have written couple of blogs but<br>
+      I like making and editing videos and do a little bit of photography. I write
+      and test small scripts which are simple and readable.I like to code in
+      python and sometimes c or java.I like to write stuff; I have written couple of blogs but
       never publish them XD .I love playing games and most of the other normie stuff.
     </p>
   </div>
   <div class="blog" id="achievement">
     <h2>Achievements</h2>
     <p>
-      I don't have many achievements in a professional level so I leave a placeholder<br>
-      here which I am sure I will fill with all kinds of good stuff in the coming years. :)<br><br>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt<br>
-      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco<br>
-      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in<br>
-      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat<br>
+      I don't have many achievements in a professional level so I leave a placeholder
+      here which I am sure I will fill with all kinds of good stuff in the coming years. :)
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </div>
   <div class="blog" id="prog">
     <h2>Programing Languages</h2>
-    <p>I am familiar with C++ Python and Java.I have an intermediate knowlede in HTML5 CSS and JavaScript.<br>
-    (This website that youre seeing is me trying to learn these stuff.).<br>
-    I am also trying to learn about different frameworks like react, django etc.<br>
+    <p>I am familiar with C++ Python and Java.I have an intermediate knowledge in HTML5 CSS and JavaScript.
+    (This website that youre seeing is me trying to learn these stuff.).
+    I am also trying to learn about different frameworks like react, django etc.
     I try to learn something new everyday and keep myself updated with the ever-growing tech.
     </p>
   </div>
@@ -100,9 +101,9 @@
   <div class="blog">
     <h2>What can I do for you!</h2>
     <p>
-      I'm a minimalist who focusses on simple, bloat free and clean code that is easy<br>
-      to read and open source.My ideology is that if something has fewer lines of code<br>
-      then there's a less chance of bugs in it. If you would like to collaborate with <br>
+      I'm a minimalist who focusses on simple, bloat free and clean code that is easy
+      to read and open source.My ideology is that if something has fewer lines of code
+      then there's a less chance of bugs in it. If you would like to collaborate with
       me on any project or connect with me, hit me up on my socials below(really inactive).
     </p>
   </div>
@@ -111,7 +112,7 @@
     <div style="font-size:20px; padding-bottom:50px;">Connect with me!</div>
     <span>
     <a href="https://www.facebook.com/Arjun-Radhakrishnan-320677175277625"  class="socials"><img src="images/facebook.png" alt="fb" ></a>
-    <a href="https://instagram.com/arjunradhakrishnan_"  class="socials"><img src="images/instagram.png" alt="instagram" ></a>
+    <a href="https://instagram.com/arjunradhakrishnan_"  class="socials"><img src="images/instagram.jpg" alt="instagram"></a>
     <a href="https://github.com/arjun-g-krishna"  class="socials"><img src="images/github.png" alt="github" ></a>
     <a href="https://twitter.com/ajugk_"  class="socials"><img src="images/twitter.png" alt="twitter"></a>
     <a href="https://www.linkedin.com/in/ajugk"  class="socials"><img src="images/linkedin.png" alt="linkedin" ></a>
