touch of bootstrap :)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Arjun</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
   <div class="hello">
     Hello! I'm Arjun<span class="blink">_</span>
   </div>
-  <div class="blog" id="personal">
+  <div class="blog container" id="personal">
     <h2>Personal life</h2>
     <p>
       I am a 19 y/o Computer Science and Engineering student from Kerala, India. I live in
@@ -47,7 +48,7 @@
       but also of knowing when I needed to follow.
      </p>
   </div>
-  <div class="blog" id="interest">
+  <div class="blog container" id="interest">
     <h2>Interests</h2>
     <p>
       I like making and editing videos and do a little bit of photography. I write
@@ -56,7 +57,7 @@
       never publish them XD .I love playing games and most of the other normie stuff.
     </p>
   </div>
-  <div class="blog" id="achievement">
+  <div class="blog container" id="achievement">
     <h2>Achievements</h2>
     <p>
       I don't have many achievements in a professional level so I leave a placeholder
@@ -68,7 +69,7 @@
       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </div>
-  <div class="blog" id="prog">
+  <div class="blog container" id="prog">
     <h2>Programing Languages</h2>
     <p>I am familiar with C++ Python and Java.I have an intermediate knowledge in HTML5 CSS and JavaScript.
     (This website that youre seeing is me trying to learn these stuff.).
@@ -76,7 +77,7 @@
     I try to learn something new everyday and keep myself updated with the ever-growing tech.
     </p>
   </div>
-  <div class="blog" id="soft">
+  <div class="blog container" id="soft">
     <h2>Soft Skills</h2>
     <p>
       <ul>
@@ -89,7 +90,7 @@
       </ul>
     </p>
   </div>
-  <div class="blog" id="mrworldwide">
+  <div class="blog container" id="mrworldwide">
     <h2>Languages I know</h2>
       In  decreasing order of proficiency.
       <ul>
@@ -99,7 +100,7 @@
         <li>தமிழ் (Tamil)</li>
       </ul>
   </div>
-  <div class="blog">
+  <div class="blog container">
     <h2>What can I do for you!</h2>
     <p>
       I'm a minimalist who focusses on simple, bloat free and clean code that is easy
