--- a/index.html
+++ b/index.html
@@ -1,125 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Arjun</title>
-  </head>
-  <body>
-    <div class="topbar">
-    <div class="dropdown">
-      <button class="dropbtn">About</button>
-      <div class="dropdown-content">
-        <a href="#personal">Personal life</a>
-        <a href="#interest">Interests</a>
-        <a href="#achievement">Achievements</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Skills</button>
-      <div class="dropdown-content">
-        <a href="#prog">Programing languages</a>
-        <a href="#soft">Soft skills</a>
-        <a href="#mrworldwide">Languages I know</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Connect</button>
-      <div class="dropdown-content">
-        <a href="mailto:arjunradhakrishnan52@gmail.com">Mail</a>
-        <a href="#socials">Socials</a>
-      </div>
-    </div>
-  </div>
-  <div class="hello">
-    Hello! I'm Arjun<span class="blink">_</span>
-  </div>
-  <div class="blog container" id="personal">
-    <h2>Personal life</h2>
-    <p>
-      I am a 19 y/o Computer Science and Engineering student from Kerala, India. I live in
-      the western part of Kerala in the district of Alappuzha, away from all the busy
-      commotion of the town.I'm friendly and easy to talk to.I’d describe myself as an enthusiastic
-      team player.I played football both in high school and in college, so I learned how to work with
-      others to achieve a collective goal. I also learned the importance not only of being able to lead,
-      but also of knowing when I needed to follow.
-     </p>
-  </div>
-  <div class="blog container" id="interest">
-    <h2>Interests</h2>
-    <p>
-      I like making and editing videos and do a little bit of photography. I write
-      and test small scripts which are simple and readable.I like to code in
-      python and sometimes c or java.I like to write stuff; I have written couple of blogs but
-      never publish them XD .I love playing games and most of the other normie stuff.
-    </p>
-  </div>
-  <div class="blog container" id="achievement">
-    <h2>Achievements</h2>
-    <p>
-      I don't have many achievements in a professional level so I leave a placeholder
-      here which I am sure I will fill with all kinds of good stuff in the coming years. :)
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-  </div>
-  <div class="blog container" id="prog">
-    <h2>Programing Languages</h2>
-    <p>I am familiar with C++ Python and Java.I have an intermediate knowledge in HTML5 CSS and JavaScript.
-    (This website that youre seeing is me trying to learn these stuff.).
-    I am also trying to learn about different frameworks like react, django etc.
-    I try to learn something new everyday and keep myself updated with the ever-growing tech.
-    </p>
-  </div>
-  <div class="blog container" id="soft">
-    <h2>Soft Skills</h2>
-    <p>
-      <ul>
-        <li>Problem Solving</li>
-        <li>Honesty</li>
-        <li>Helpfulness</li>
-        <li>Adaptability</li>
-        <li>Creativiity</li>
-        <li>Teamwork</li>
-      </ul>
-    </p>
-  </div>
-  <div class="blog container" id="mrworldwide">
-    <h2>Languages I know</h2>
-      In  decreasing order of proficiency.
-      <ul>
-        <li>മലയാളം (Malayalam)</li>
-        <li>English</li>
-        <li>हिन्दी (Hindi)</li>
-        <li>தமிழ் (Tamil)</li>
-      </ul>
-  </div>
-  <div class="blog container">
-    <h2>What can I do for you!</h2>
-    <p>
-      I'm a minimalist who focusses on simple, bloat free and clean code that is easy
-      to read and open source.My ideology is that if something has fewer lines of code
-      then there's a less chance of bugs in it. If you would like to collaborate with
-      me on any project or connect with me, hit me up on my socials below(really inactive).
-    </p>
-  </div>
-
-  <div class="footer" id="socials">
-    <div style="font-size:20px; padding-bottom:50px;">Connect with me!</div>
-    <span>
-    <a href="https://www.facebook.com/Arjun-Radhakrishnan-320677175277625"  class="socials"><img src="images/facebook.png" alt="fb" ></a>
-    <a href="https://instagram.com/arjunradhakrishnan_"  class="socials"><img src="images/instagram.jpg" alt="instagram"></a>
-    <a href="https://github.com/arjun-g-krishna"  class="socials"><img src="images/github.png" alt="github" ></a>
-    <a href="https://twitter.com/ajugk_"  class="socials"><img src="images/twitter.png" alt="twitter"></a>
-    <a href="https://www.linkedin.com/in/ajugk"  class="socials"><img src="images/linkedin.png" alt="linkedin" ></a>
-    </span>
-    <div style="padding-top:10px; font-size:15px;">Made with ❤ by Arjun</div>
-  </div>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.scss" />
+        <title>Arjun Radhakrishnan</title>
+    </head>
+    <body></body>
 </html>
