section 1 partially complete

--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./style.scss" />
+        <link rel="stylesheet" href="./style.css" />
         <title>Arjun Radhakrishnan</title>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <nav>
+                <div class="brand">
+                    <a href="/">Arjun<span class="accent">.</span></a>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>Contact Me</li>
+                    </ul>
+                </div>
+            </nav>
+            <section class="faced">
+                <div class="greeting">
+                    <span class="unimp">Hello I'm</span>
+                    Arjun G Krishna<span class="accent">.</span>
+                    <a href="" target="blank">
+                        <button class="link-btn">
+                            Github Profile
+                            <svg
+                                class="w-6 h-6"
+                                fill="none"
+                                stroke="currentColor"
+                                viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg"
+                                style="height: 1.2rem"
+                            >
+                                <path
+                                    class="arrow"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="1"
+                                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                                ></path>
+                            </svg>
+                        </button>
+                    </a>
+                </div>
+                <img src="" alt="Profile Picture" />
+            </section>
+        </div>
+    </body>
 </html>
