--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     class="arrow"
                                     stroke-linecap="round"
                                     stroke-linejoin="round"
-                                    stroke-width="1"
+                                    stroke-width="2"
                                     d="M14 5l7 7m0 0l-7 7m7-7H3"
                                 ></path>
                             </svg>
@@ -47,6 +47,43 @@
                     </a>
                 </div>
                 <img src="" alt="Profile Picture" />
+            </section>
+            <section class="about">
+                <div class="content">
+                    <h1 class="heading">
+                        About Me<span class="accent">.</span>
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Expedita molestiae, voluptatum culpa sapiente fuga
+                        odit laborum qui hic cumque! Repellat, porro tempora
+                        quis enim voluptatem laudantium adipisci cupiditate
+                        accusamus sed velit eligendi aperiam eius beatae esse at
+                        ea aspernatur magnam.
+                    </p>
+                </div>
+                <img src="./assets/about-img.svg" alt="something" />
+            </section>
+            <section class="skill">
+                <h1 class="heading">
+                    Stuff I know<span class="accent">.</span>
+                </h1>
+                <ul>
+                    <li><span class="accent">.</span>c</li>
+                    <li><span class="accent">.</span>py</li>
+                    <li><span class="accent">.</span>html</li>
+                    <li><span class="accent">.</span>css</li>
+                    <li><span class="accent">.</span>sh</li>
+                    <li><span class="accent">.</span>c++</li>
+                </ul>
+            </section>
+            <section class="contact">
+                <h1 class="heading">Contact Me<span class="accent">!</span></h1>
+                <ul>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Github</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                </ul>
             </section>
         </div>
     </body>
