removed parcel as it is not that useful

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 </div>
                 <div class="links">
                     <ul>
-                        <li>About</li>
-                        <li>Skills</li>
-                        <li>Contact Me</li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skill">Skills</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
                     </ul>
                 </div>
             </nav>
@@ -48,7 +48,7 @@
                 </div>
                 <img src="" alt="Profile Picture" />
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="content">
                     <h1 class="heading">
                         About Me<span class="accent">.</span>
@@ -64,7 +64,7 @@
                 </div>
                 <img src="./assets/about-img.svg" alt="something" />
             </section>
-            <section class="skill">
+            <section class="skill" id="skill">
                 <h1 class="heading">
                     Stuff I know<span class="accent">.</span>
                 </h1>
@@ -77,11 +77,11 @@
                     <li><span class="accent">.</span>c++</li>
                 </ul>
             </section>
-            <section class="contact">
-                <h1 class="heading">Contact Me<span class="accent">!</span></h1>
+            <section class="contact" id="contact">
+                <h1 class="heading">Contact Me<span class="accent">@</span></h1>
                 <ul>
                     <li><a href="">Instagram</a></li>
-                    <li><a href="">Github</a></li>
+                    <li><a href="">Facebook</a></li>
                     <li><a href="">LinkedIn</a></li>
                 </ul>
             </section>
