added profile pics and site now changed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
                         </button>
                     </a>
                 </div>
-                <img src="" alt="Profile Picture" />
+                <div>
+                    <img
+                        class="prof-card"
+                        src="./assets//profile-img.jpg"
+                        alt="Profile Picture"
+                    />
+                </div>
             </section>
             <section class="about" id="about">
                 <div class="content">
