--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
                         About Me<span class="accent">.</span>
                     </h1>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Expedita molestiae, voluptatum culpa sapiente fuga
-                        odit laborum qui hic cumque! Repellat, porro tempora
-                        quis enim voluptatem laudantium adipisci cupiditate
-                        accusamus sed velit eligendi aperiam eius beatae esse at
-                        ea aspernatur magnam.
+                        Hi, I am a 20 year old engineering student from Kerala. I like sleeping, playing games and watching anime.
                     </p>
                 </div>
                 <img src="./assets/about-img.svg" alt="something" />
@@ -86,9 +81,9 @@
             <section class="contact" id="contact">
                 <h1 class="heading">Contact Me<span class="accent">@</span></h1>
                 <ul>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Facebook</a></li>
-                    <li><a href="">LinkedIn</a></li>
+                    <li><a href="https://www.instagram.com/arjunradhakrishnan_">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/arjung29">Facebook</a></li>
+                    <li><a href="https://www.linkedin.com/in/arjun-gkrishna">LinkedIn</a></li>
                 </ul>
             </section>
         </div>
