--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="greeting">
                     <span class="unimp">Hello I'm</span>
                     Arjun G Krishna<span class="accent">.</span>
-                    <a href="" target="blank">
+                    <a href="https://github.com/arjun-g-krishna" target="blank">
                         <button class="link-btn">
                             Github Profile
                             <svg
