--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         About Me<span class="accent">.</span>
                     </h1>
                     <p>
-                        Hi, I am a 20 year old engineering student from Kerala. I like sleeping, playing games and watching anime.
+                        Hi, I am a 20 year old engineering student from Kerala. I like learning and creating new stuff.
                     </p>
                 </div>
                 <img src="./assets/about-img.svg" alt="something" />
